SimInf 5.1.0.9000
-----------------

IMPROVEMENTS

* Added the 'trajectory' method to facilitate post-processing of
  simulation data. See documentation.

BREAKING CHANGES

* Removed the following methods: 'U', 'V', 'recovered', 'susceptible',
  and 'infected'. Use the new 'trajectory' method instead, see the
  documentation.

* Renamed the type option 'bnp' to 'nop' in the 'prevalence' method to
  calculate the proportion of nodes with at least one case.

SimInf 5.1.0
------------

BUG FIXES

* Added missing calls to 'PROTECT' to protect newly created R objects
  in C code from the garbage collector.

* Protect against invalid transition index in direct SSA.

SimInf 5.0.1
------------

IMPROVEMENTS

* Improvements in the vignette.

SimInf 5.0.0
------------

NEW FEATURES

* Added a vignette that provide a technical description of the
  framework, how to use a predefined model in SimInf, demonstrate a
  case study, and finally show how to extend the framework with a user
  defined model.

* Added the 'pairs' and 'boxplot' methods to visualise the number of
  individuals in each compartment.

* Added 'spaghetti' argument to the plot method to draw one line for
  each node.

* Added the method 'package_skeleton' to create a package skeleton for
  a model depending on SimInf.

CHANGES

* Renamed 'plot' argument 'which' to 'N'.

IMPROVEMENTS

* The core solver now checks the return value from the transition rate
  functions and raise an error if the return value is non-finite or
  less than zero.

* Added example data ('nodes') with a population of 1600 nodes within
  a 50 square kilometer region to facilitate illustration of various
  models.

BUG FIXES

* Added missing call to 'PROTECT' to protect newly created matrices (R
  objects) from the garbage collector.

SimInf 4.0.0
------------

NEW FEATURES

* Added the 'V' and 'U' getter/setter methods to the 'SimInf_model'.

* The header file 'SimInf.h' was added to the folder 'inst/include' to